# python-github-analysis

./: .env.sample  pyproject.toml  sampledb.sqlite3
src/: main.py
src/models/: pullrequest_model.py  reviewer_model.py  setting.py
